--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,11 +2,12 @@ FROM openjdk:8-jre-alpine
 
 ENV SPRING_OUTPUT_ANSI_ENABLED=ALWAYS \
     JHIPSTER_SLEEP=0 \
-    JAVA_OPTS=""
+    JAVA_OPTS="" \
 
 # Add a jhipster user to run our application so that it doesn't need to run as root
-RUN adduser -D -s /bin/sh jhipster
-WORKDIR /home/jhipster
+RUN adduser -D -s /bin/sh jhipster && \
+    mkdir /home/sample
+WORKDIR /home/sample
 
 ADD entrypoint.sh entrypoint.sh
 RUN chmod 755 entrypoint.sh && chown jhipster:jhipster entrypoint.sh
@@ -16,5 +17,7 @@ ENTRYPOINT ["./entrypoint.sh"]
 
 EXPOSE 8080
 
-ADD *.war app.war
+ADD ${buildDir}/libs/*.war app.war
+
+RUN ["java", "-jar", "app.war"]
 
