--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -37,8 +37,8 @@ spring:
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:postgresql://localhost:5432/sample
-        username: sample
-        password:
+        username: postgres
+        password: postgres
         hikari:
             auto-commit: false
     jpa:
